src/components/theme/Input/input.module.css
.input {
	position: relative;
	display: flex;
	flex-direction: column;
	width: 100%;
	color: black;
	font-size: 0.8rem;
	font-weight: 500;

	&:has(input[data-invalid="true"]) {
		color: var(--error-color);

		input {
			color: var(--error-color);
		}
	}

	&:has(input:is(:disabled, :read-only:not([hidden]))) {
		opacity: 0.5;
	}

	input {
		font-family: Heebo;
		border: 0;
		border-bottom: 1px solid;
		padding-block: 0.15rem;
		margin-bottom: 1rem;
		outline: 1px solid transparent;

		&:focus {
			border-bottom-width: 2px;
		}

		&::placeholder {
			color: var(--gray);
		}
	}

	.label-content {
		display: flex;
		gap: 5px;

		.required {
			color: var(--error-color);
		}
	}

	.clear-button {
		position: absolute;
		left: 3px;
		bottom: 1.4rem;
		display: flex;
		width: 11px;
		border: 0;
		background: none;
		aspect-ratio: 1;
		cursor: pointer;

		svg {
			width: 100%;
			height: 100%;
		}
	}

	&:has(input:is([type="date"], [type="datetime-local"])) .clear-button {
		left: -20px;
		background-color: white;
	}
}

:global(:root[data-mobile="true"]) .input {
	font-size: 1rem;
}

